--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -7,6 +7,7 @@ name: $(BuildID)
 
 trigger:
   - main
+  - features/*
   - feature/*
 
 variables:
@@ -40,15 +41,14 @@ steps:
     inputs:
       sourceFolder: '$(Build.SourcesDirectory)'
       contents: |
-         src/*
-         public/*
+         build/*
       targetFolder: '$(Build.ArtifactStagingDirectory)'
     displayName: 'Copy project files'
     
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), ne(variables.isMaster, true))
     inputs:
-      artifactName: ncea-frontend_$(variables.branch)_$(Date:yyyyMMdd)$(Rev:.r)
+      artifactName: 'ncea-frontend_$(variables.branch)_$(Date:yyyyMMdd)$(Rev:.r)'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
     displayName: 'Publish npm artifact'
@@ -56,7 +56,7 @@ steps:
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), ne(variables.isMaster, true))
     inputs:
-      artifactName: ncea-frontend_
+      artifactName: 'ncea-frontend_$(Date:yyyyMMdd)$(Rev:.r)'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
     displayName: 'Publish npm artifact'
