--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "prettier-watch:win32": "onchange \"src/**/*.ts\" -- prettier --write {{changed}}",
     "prettier-watch:darwin:linux": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "prettier-watch:default": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
-    "test": "jest --config tools/jest.config.js --coverage -u",
-    "coverage": "jest --config tools/jest.config.js --coverage --coverageReporters=cobertura",
+    "test": "jest --config tools/jest.config.js --coverage --coverageReporters=cobertura",
     "test:dev": "jest --watchAll --config tools/jest.config.js -u",
     "prepare": "husky install .husky"
   },
