--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -12,7 +12,8 @@ trigger:
 
 variables:
   isMaster: $[eq(variables['build.sourceBranch'], 'refs/heads/master')]
-  branch: $[replace(variables['Build.SourceBranch'], '/', '-')]
+  branchSource: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
+  branch: $[replace(branchSource, '/', '-')]
 
 pool:
     vmImage: 'ubuntu-latest'  
@@ -47,13 +48,13 @@ steps:
 
   - script: |
       echo "Branch name: $(branch)"
-      echo "Artifact name1: ncea-frontend_$(Rev:.r)"
-      echo "Artifact name2: 'ncea-frontend_$(branch)_$(Date:yyyyMMdd)$(Rev:.r)"
+      echo "Artifact name1: ncea-frontend_$(BuildID)_$(BuildNumber)"
+      echo "Artifact name2: ncea-frontend_$(branch)_$(BuildNumber)"
     
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), ne(variables.isMaster, true))
     inputs:
-      artifactName: 'ncea-frontend_$(Rev:.r)'
+      artifactName: 'ncea-frontend_$(branch)_$(BuildNumber)'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
     displayName: 'Publish npm artifact'
@@ -61,7 +62,7 @@ steps:
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), ne(variables.isMaster, true))
     inputs:
-      artifactName: 'ncea-frontend_$(Date:yyyyMMdd)$(Rev:.r)'
+      artifactName: 'ncea-frontend_$(BuildNumber)'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
     displayName: 'Publish npm artifact'
