--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -29,8 +29,9 @@ steps:
       SonarCloud: 'defra-sonarcloud'
       organization: 'defra'
       scannerMode: 'MSBuild'
-      projectKey: 'DEFRA_ncea-infrastructure-core'
-      projectName: 'ncea-infrastructure-core'
+      projectKey: 'DEFRA_ncea-frontend'
+      projectName: 'ncea-frontend'
+    displayName: 'Prepare analysis on SonarCloud'
   
   - script: |
       npm install
@@ -45,7 +46,17 @@ steps:
     inputs:
       codeCoverageTool: Cobertura
       summaryFileLocation: $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml
-    displayName: 'Publish code coverage'  
+    displayName: 'Publish code coverage result'
+
+  - task: SonarCloudAnalyze@1
+    inputs:
+      jdkversion: 'JAVA_HOME_17_X64'
+    displayName: 'Run Code Analysis'
+
+  - task: SonarCloudPublish@1
+    inputs:
+      pollingTimeoutSec: '300'
+    displayName: 'Publish Quality Gate Result'
 
   - task: CopyFiles@2
     inputs:
