--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -28,6 +28,7 @@ steps:
     inputs:
       SonarCloud: 'defra-sonarcloud'
       organization: 'defra'
+      scannerMode: CLI
       projectKey: 'DEFRA_ncea-frontend'
       projectName: 'ncea-frontend'
     displayName: 'Prepare analysis on SonarCloud'
