--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,18 +3,17 @@ sonar.projectKey=DEFRA_ncea-frontend
 sonar.projectName=ncea-frontend
 sonar.projectVersion=1.0
 sonar.language=js
+sonar.profile=node
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=tests/**/*.spec.js
+#sonar.exclusions=tests/**/*.spec.js
+sonar.tests=tests
 sonar.test.inclusions=tests/**/*.spec.js
-sonar.coverage.exclusions=tests/**/*.spec.js,src/**/*.mock.js,node_modules/*,coverage/lcov-report/*
+sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
 
 # optional description
 sonar.projectDescription=NCEA Search WebApp
-
-sonar.profile=node
-sonar.tests=spec/node
 
 sonar.dynamicAnalysis=reuseReports
