--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,10 +8,16 @@ sonar.sources=src
 sonar.sourceEncoding=UTF-8
 #sonar.exclusions=tests/**/*.spec.js
 sonar.tests=tests
-sonar.test.inclusions=tests/**/*.spec.js
-sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=test-report.xml
+sonar.test.inclusions=tests/**/*.spec.ts
+#sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
+#sonar.javascript.lcov.reportPaths=coverage/lcov.info
+#sonar.testExecutionReportPaths=test-report.xml
+
+sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
+sonar.java.codeCoveragePlugin=jacoco
+sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
+sonar.testExecutionReportPaths=target/test-results/jest/TESTS-results-sonar.xml
+sonar.javascript.lcov.reportPaths=target/test-results/lcov.info
 
 # optional description
 sonar.projectDescription=NCEA Search WebApp
