Added sonarclod config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,11 +13,11 @@ sonar.test.inclusions=tests/**/*.spec.ts
 #sonar.javascript.lcov.reportPaths=coverage/lcov.info
 #sonar.testExecutionReportPaths=test-report.xml
 
-sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
-sonar.java.codeCoveragePlugin=jacoco
-sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
-sonar.testExecutionReportPaths=target/test-results/jest/TESTS-results-sonar.xml
-sonar.javascript.lcov.reportPaths=target/test-results/lcov.info
+#sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
+#sonar.java.codeCoveragePlugin=jacoco
+#sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
+#sonar.testExecutionReportPaths=target/test-results/jest/TESTS-results-sonar.xml
+#sonar.javascript.lcov.reportPaths=target/test-results/lcov.info
 
 # optional description
 sonar.projectDescription=NCEA Search WebApp
