--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,8 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=tests/**/*.spec.js
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*.spec.ts
-#sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
-#sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 #sonar.testExecutionReportPaths=test-report.xml
 
 #sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
