--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-mock-extended": "3.0.5",
+    "jest-sonar-reporter": "2.0.0",
     "nodemon": "3.0.2",
     "onchange": "7.1.0",
     "prettier": "3.1.1",
@@ -69,5 +70,10 @@
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
     "nunjucks": "3.2.4"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-report.xml",
+    "indent": 4
   }
 }
