--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -62,9 +62,10 @@ steps:
     inputs:
       sourceFolder: '$(Build.SourcesDirectory)'
       contents: |
-         build/*
+        '**/*'
       targetFolder: '$(Build.ArtifactStagingDirectory)'
-    displayName: 'Copy project files'
+      cleanTargetFolder: true
+    displayName: 'Copy project files'                  
 
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), ne(variables.isMaster, true))
