--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
+    "@types/hapi__joi": "^17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
     "@types/nunjucks": "3.2.6",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
+    "dotenv": "16.3.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "27.6.0",
@@ -64,6 +66,7 @@
   "dependencies": {
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
+    "@hapi/joi": "17.1.1",
     "@hapi/vision": "7.0.3",
     "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
