--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -43,12 +43,14 @@ steps:
     displayName: 'npm test'
 
   - task: PublishCodeCoverageResults@1
+    condition: succeededOrFailed()
     inputs:
       codeCoverageTool: Cobertura
       summaryFileLocation: $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml
     displayName: 'Publish code coverage result'
 
   - task: SonarCloudAnalyze@1
+    condition: succeededOrFailed()
     inputs:
       jdkversion: 'JAVA_HOME_17_X64'
     displayName: 'Run Code Analysis'
