--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,9 +10,9 @@ sonar.sourceEncoding=UTF-8
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*.spec.ts
 sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.dynamicAnalysis=reuseReports
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=reports/test-report.xml
 
 # optional description
 sonar.projectDescription=NCEA Search WebApp
