--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.tests=tests
 sonar.test.inclusions=tests/**/*.spec.ts
 sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
 sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
 
 # optional description
