--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start:dev": "npx nodemon --config tools/nodemon.json",
+    "start:dev": "cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json",
     "start": "npm run build && node build/index.ts",
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint --config tools/.eslintrc src/**/* --ext .js,.ts",
@@ -44,6 +44,8 @@
     "@types/nunjucks": "3.2.6",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
+    "axios-mock-adapter": "^1.22.0",
+    "cross-env": "^7.0.3",
     "dotenv": "16.3.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
