--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "axios-mock-adapter": "^1.22.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "dotenv": "16.3.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -66,6 +66,8 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@azure/identity": "^4.0.0",
+    "@azure/keyvault-secrets": "^4.7.0",
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
     "@hapi/joi": "17.1.1",
