--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -6,9 +6,11 @@
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
 trigger:
-  - main
-  - features/*
-  - feature/*
+  branches:
+    include:
+      - main
+      - features/*
+      - feature/*
 
 variables:
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
@@ -19,68 +21,84 @@ variables:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-  - task: UseNode@1
-    inputs:
-      version: '16.x'
-    displayName: 'Install Node.js'
+jobs:
+- job: Build
+  displayName: 'Build and Test'
 
-  - task: SonarCloudPrepare@1
-    inputs:
-      SonarCloud: 'defra-sonarcloud'
-      organization: 'defra'
-      scannerMode: CLI
-      projectKey: 'DEFRA_ncea-frontend'
-      projectName: 'ncea-frontend'
-    displayName: 'Prepare analysis on SonarCloud'
+  steps:
+    - task: UseNode@1
+      inputs:
+        version: '16.x'
+      displayName: 'Install Node.js'
 
-  - script: |
-      npm install
-      npm run build
-    displayName: 'npm install and build'
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'defra-sonarcloud'
+        organization: 'defra'
+        scannerMode: CLI
+        projectKey: 'DEFRA_ncea-frontend'
+        projectName: 'ncea-frontend'
+      displayName: 'Prepare analysis on SonarCloud'
 
-  - script: |
-      npm run test
-    displayName: 'npm test'
+    - script: |
+        npm install
+        npm run build
+      displayName: 'npm install and build'
 
-  - task: PublishCodeCoverageResults@1
-    condition: succeededOrFailed()
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml
-    displayName: 'Publish code coverage result'
+    - script: |
+        npm run test
+      displayName: 'npm test'
 
-  - task: SonarCloudAnalyze@1
-    inputs:
-      jdkversion: 'JAVA_HOME_17_X64'
-    displayName: 'Run Code Analysis'
+    - task: PublishCodeCoverageResults@1
+      condition: succeededOrFailed()
+      inputs:
+        codeCoverageTool: Cobertura
+        summaryFileLocation: $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml
+      displayName: 'Publish code coverage result'
 
-  - task: SonarCloudPublish@1
-    inputs:
-      pollingTimeoutSec: '300'
-    displayName: 'Publish Quality Gate Result'
+    - task: SonarCloudAnalyze@1
+      inputs:
+        jdkversion: 'JAVA_HOME_17_X64'
+      displayName: 'Run Code Analysis'
 
-  - task: CopyFiles@2
-    inputs:
-      sourceFolder: '$(Build.SourcesDirectory)'
-      contents: |
-        build/**
-      targetFolder: '$(Build.ArtifactStagingDirectory)'
-      cleanTargetFolder: true
-    displayName: 'Copy project files'
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '300'
+      displayName: 'Publish Quality Gate Result'
 
-  - task: PublishPipelineArtifact@1
-    condition: and(and(succeeded(), ne(variables.isMaster, true)), ne(variables.isPullRequest, true))
-    inputs:
-      artifactName: 'ncea-frontend_$(Build.BuildNumber)_$(branch)'
-      targetPath: '$(Build.ArtifactStagingDirectory)'
-      publishLocation: 'pipeline'
-    displayName: 'Publish npm artifact'
+- job: PublishArtifact
+  displayName: 'Publish Artifact'
+  dependsOn: Build
+  condition: |
+    and(
+        or(
+            and(succeeded(), ne(variables.isMaster, true), ne(variables.isPullRequest, true)),
+            and(succeeded(), eq(variables.isMaster, true))
+          )
+        )
+    
+  steps:
+    - task: CopyFiles@2
+      inputs:
+        sourceFolder: '$(Build.SourcesDirectory)'
+        contents: |
+          build/**
+        targetFolder: '$(Build.ArtifactStagingDirectory)'
+        cleanTargetFolder: true
+      displayName: 'Copy project files'
 
-  - task: PublishPipelineArtifact@1
-    condition: and(succeeded(), eq(variables.isMaster, true))
-    inputs:
-      artifactName: 'ncea-frontend_$(Build.BuildNumber)'
-      targetPath: '$(Build.ArtifactStagingDirectory)'
-      publishLocation: 'pipeline'
-    displayName: 'Publish npm artifact'
+    - task: PublishPipelineArtifact@1
+      condition: and(and(succeeded(), ne(variables.isMaster, true)), ne(variables.isPullRequest, true))
+      inputs:
+        artifactName: 'ncea-frontend_$(Build.BuildNumber)_$(branch)'
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        publishLocation: 'pipeline'
+      displayName: 'Publish npm artifact'
+
+    - task: PublishPipelineArtifact@1
+      condition: and(succeeded(), eq(variables.isMaster, true))
+      inputs:
+        artifactName: 'ncea-frontend_$(Build.BuildNumber)'
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        publishLocation: 'pipeline'
+      displayName: 'Publish npm artifact'
