294755 - Update the plugin login to correct the type definitions and fix the issue while reading the data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,15 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["node", "jest", "hapi__vision", "nunjucks", "hapi-pino", "jsdom"],
+    "types": [
+      "node",
+      "jest",
+      "hapi__vision",
+      "nunjucks",
+      "hapi-pino",
+      "jsdom",
+      "./src/models/types/types.d.ts"
+    ],
     "moduleDetection": "force"
   },
   "include": ["src/**/*.ts"],
