--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,10 +17,10 @@ variables:
   isPullRequest: $[eq(variables['Build.Reason'], 'PullRequest')]
   branchSource: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
   branch: $[replace(variables['branchSource'], '/', '-')]
-  ${{ if eq(variables.isMaster, true) }}:
-    artifactNameSuffix: ''
-  ${{ else }}:
+  ${{ if ne(variables.isMaster, 'true') }}:
     artifactNameSuffix: _$(branch)
+  ${{ else }}:
+    artifactNameSuffix: ''
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -77,13 +77,12 @@ steps:
 
   - task: PublishPipelineArtifact@1
     condition: |
-        or(
-            and(and(succeeded(), eq(variables.isMaster, false)), eq(variables.isPullRequest, false)),
-            and(succeeded(), eq(variables.isMaster, true))
-          )
+      or(
+          and(and(succeeded(), eq(variables.isMaster, false)), eq(variables.isPullRequest, false)),
+          and(succeeded(), eq(variables.isMaster, true))
+        )
     inputs:
       artifactName: 'ncea-frontend_$(Build.BuildNumber)$(artifactNameSuffix)'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
     displayName: 'Publish npm artifact'
-    
