--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,6 +9,8 @@ trigger:
   branches:
     include:
       - main
+      - features/*
+      - feature/*
 
 variables:
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
