--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "lib": ["es6", "dom"],
+    "target": "ES2020",
+    "lib": ["ES2020", "dom"],
     "module": "commonjs",
     "rootDir": "src",
     "resolveJsonModule": true,
