--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-mock-extended": "3.0.5",
     "jest-sonar-reporter": "2.0.0",
     "nodemon": "3.0.2",
+    "nunjucks-date-filter": "^0.1.1",
     "onchange": "7.1.0",
     "prettier": "3.1.1",
     "rimraf": "5.0.5",
