--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
     "nunjucks": "3.2.4",
+    "nunjucks-date-filter": "^0.1.1",
     "shelljs": "0.8.5"
   },
   "jestSonar": {
