configure pr decoration

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -51,6 +51,7 @@ steps:
       projectName: 'ncea-frontend'
       extraProperties: |
         sonar.pullrequest.provider=GitHub
+        sonar.pullrequest.github.endpoint=https://api.github.com/
         sonar.pullrequest.github.repository=DEFRA/ncea-frontend
         sonar.pullrequest.key=$(System.PullRequest.PullRequestId)
         sonar.pullrequest.base=main
