294755 - recfactored the logic for reusability and manintainability

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,8 +9,8 @@ trigger:
   branches:
     include:
       - main
-      - features/*
-      - feature/*
+      # - features/*
+      # - feature/*
 
 variables:
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
