--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,27 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "typedocOptions": {
+    "entryPoints": ["src/**/*.ts"],
+    "out": "docs",
+    "name": "Natural Capital and Ecosystem Assessment"
+  },
   "compilerOptions": {
     "target": "ES2020",
     "lib": ["ES2020", "dom"],
     "module": "commonjs",
-    "rootDir": "src",
+    "rootDir": "src/",
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "build",
+    "outDir": "build/",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "declaration": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "emitDeclarationOnly": true,
     "types": [
       "node",
       "jest",
@@ -24,5 +34,5 @@
     "moduleDetection": "force"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "coverage", "reports", "tools", "tests"]
 }
