--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
-    "@types/hapi__joi": "^17.1.14",
+    "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
@@ -69,15 +69,15 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@azure/identity": "^4.0.0",
-    "@azure/keyvault-secrets": "^4.7.0",
+    "@azure/identity": "4.0.0",
+    "@azure/keyvault-secrets": "4.7.0",
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
-    "@hapi/joi": "17.1.1",
     "@hapi/vision": "7.0.3",
     "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
+    "joi": "17.12.1",
     "nunjucks": "3.2.4",
     "shelljs": "0.8.5"
   },
