294755 - updated the folder strucutre

--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
-    "@types/hapi__joi": "^17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.11",
+    "@types/joi": "17.2.3",
     "@types/node": "20.10.5",
     "@types/nunjucks": "3.2.6",
     "@types/shelljs": "0.8.15",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
-    "axios-mock-adapter": "^1.22.0",
+    "axios-mock-adapter": "1.22.0",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
     "eslint": "8.56.0",
@@ -69,19 +69,17 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@azure/identity": "^4.0.0",
-    "@azure/keyvault-secrets": "^4.7.0",
+    "@azure/identity": "4.0.0",
+    "@azure/keyvault-secrets": "4.7.0",
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
-    "@hapi/joi": "17.1.1",
     "@hapi/vision": "7.0.3",
-    "@types/hapi__joi": "^17.1.14",
     "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
-    "joi": "^17.12.0",
+    "joi": "17.12.0",
     "nunjucks": "3.2.4",
-    "nunjucks-date-filter": "^0.1.1",
+    "nunjucks-date-filter": "0.1.1",
     "shelljs": "0.8.5"
   },
   "jestSonar": {
