--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "rimraf ./build && tsc && npm run copy-files",
     "copy-files": "ts-node copyNonTSFiles.ts",
-    "start:dev": "cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json",
+    "start:dev": "concurrently \"cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json\" \"npm run json-server\"",
     "start": "npm run build && node build/index.js",
+    "json-server": "json-server ./src/services/mock-data.json --port 3300",
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint --config tools/.eslintrc src/**/* --ext .js,.ts",
     "lint:javascript:fix": "eslint --config tools/.eslintrc src/**/* --fix --ext .js,.ts",
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "axios-mock-adapter": "1.22.0",
+    "concurrently": "8.2.2",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
     "eslint": "8.56.0",
@@ -58,6 +60,7 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-mock-extended": "3.0.5",
     "jest-sonar-reporter": "2.0.0",
+    "json-server": "1.0.0-alpha.23",
     "nodemon": "3.0.2",
     "nunjucks-date-filter": "0.1.1",
     "onchange": "7.1.0",
