--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=tests/**/*.spec.js
 sonar.tests=__tests__
 sonar.test.inclusions=__tests__/**/*.spec.ts
-sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*
+sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,src/public/*
 sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
