294755 - Ignoring the static assets from sonar analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,9 @@ sonar.projectName=ncea-frontend
 sonar.projectVersion=1.0
 sonar.language=js
 sonar.profile=node
-sonar.sources=src
+sonar.sources=src/
 sonar.sourceEncoding=UTF-8
-#sonar.exclusions=tests/**/*.spec.js
+sonar.exclusions=src/public/**
 sonar.tests=__tests__
 sonar.test.inclusions=__tests__/**/*.spec.ts
 sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,src/public/*
