--- a/.eslintignore
+++ b/.eslintignore
@@ -6,5 +6,6 @@ src/infrastructure/log_files/**
 src/services/*.json
 src/public/**
 tools/**
-assets/**
+public/**
+src/assets/**
 copyNonTSFiles.js
