--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,10 +6,10 @@ sonar.language=js
 sonar.profile=node
 sonar.sources=src/
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=src/public/**
+sonar.exclusions=public/**
 sonar.tests=__tests__
 sonar.test.inclusions=__tests__/**/*.spec.ts
-sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,src/public/*
+sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,public/*
 sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
