294755 - Improved code as per the review comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 
     "outDir": "build",
     "rootDir": "./src",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "types": [
       "node",
       "jest",
