--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
     "sass": "1.70.0",
+    "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "tsx": "4.7.0",
     "typescript": "5.3.3"
